# dri

./: .gitignore  LICENSE  README.md  pyproject.toml  test.ipynb
READMEs/: 18.5b2_README.txt  18.5b3_README.txt  18.5b4_README.txt  19.0.3_README.txt  19.1.2_README.txt  19b4_README.txt  20.2_README.txt
READMEs/beta/: 18.5b1_README.txt  19b2_README.txt  19b3_README.txt  19b5_README.txt
dri/: __init__.py  color.py  color_group.py  dri.py  folder.py  fusion_comp.py  gallery.py  gallery_still.py  gallery_still_album.py  graph.py  media_pool.py  media_pool_item.py  media_storage.py  project.py  project_manager.py  resolve.py  timeline.py  timeline_item.py
resolve_init/: DaVinciResolveScript.py  __init__.py  python_get_resolve.py
resolve_type/: __init__.py  color.py  folder.py  marker_color.py  media_pool.py  media_pool_item.py  timeline.py  timeline_item.py
src/dri/: dri.py
tests/: __init__.py  conftest.py  test_project.py  test_resolve.py
