[project]
name = "dri"
version = "0.0.2"
description = "DaVinci Resolve API type system for script development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["ruff>=0.11.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dri"]
