[project]
name = "dri"
version = "0.0.2"
description = "Python type stubs for DaVinci Resolve scripting API - provides auto-completion and type hints for script development"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.14.3"]
